- added config params to the eAuth saml form - now the request is correct, but still don't know how to process the response from eAuth

--- a/src/main/resources/theme-resources/messages/admin-messages_en.properties
+++ b/src/main/resources/theme-resources/messages/admin-messages_en.properties
@@ -1,3 +1,11 @@
 # encoding: UTF-8
 eauth.requestedServiceService=Requested Service Service
-eauth.requestedServiceServiceTooltip=requestedServiceService tooltip
+eauth.requestedServiceService.tooltip=requestedServiceService tooltip. Example: x.xx.xxx.x.x.xx.x.x.x.x.x
+eauth.requestedServiceProvider=Requested Service Provider
+eauth.requestedServiceProvider.tooltip=requested Service Provider. Example: x.xx.xxx.x.x.xx.x.x
+eauth.requestedServiceLevelOfAssurance=Requested Service Provider
+eauth.requestedServiceLevelOfAssurance.tooltip=Level Of Assurance. Example: HIGH / LOW (probably there are more options)
+eauth.config=eAuth specific configurations
+eauth.config.tooltip=Configurations, related to eAuth
+eauth.requestedAttributes=Requested attributes
+eauth.requestedAttributes.tooltip=Requested Attributes, if any. The format is key=value, separated with semicolon. If there are more than one RequestedAttribute, they should be separated by new line. Example: FriendlyName=email;Name=urn:egov:bg:eauth:2.0:attributes:email;NameFormat=urn:oasis:names:tc:saml2:2.0:attrname-format:uri;isRequired=true 
